tests/ui/binop/multiply-is-deref-on-rhs.stderr
error[E0369]: cannot multiply `()` by `&i32`
  --> $DIR/multiply-is-deref-on-rhs.rs:4:5
   |
LL |     x = ()
   |         -- ()
LL |     *y
   |     ^- &i32
   |
help: you might have meant to write a semicolon here
   |
LL |     x = ();
   |           +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.
